home refeito com mais logica

--- a/index.html
+++ b/index.html
@@ -6,30 +6,48 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>Anna Bella - Home</title>
 </head>
 
 <body>
 
-    <div id="topo"></div>
+    <div id="principal">
 
-    <div id="menu">
-        <a href="">HOME</a> |
-        <a href="biografia.html">BIOGRAFIA</a> |
-        <a href="campanhas-publicitarias.html">CAMPANHAS PUBLICITARIAS</a> |
-        <a href="contato.html">CONTATO</a>
+        <div id="topo"></div>
+
+        <div id="menu">
+            <a href="index.html">HOME</a> |
+            <a href="biografia.html">BIOGRAFIA</a> |
+            <a href="campanhas-publicitarias.html">CAMPANHAS PUBLICITARIAS</a> |
+            <a href="contato.html">CONTATO</a>
+        </div>
+
+        <div id="desc">
+            <h1>Sobre Anna Bella</h1>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nam accusamus molestias est quas quia cum
+                blanditiis assumenda illo fugit placeat molestiae, eius quae veritatis necessitatibus delectus
+                repellendus quibusdam at vel! Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi earum
+                nulla corrupti optio autem odio nemo, ipsam, tempora at sed accusantium iure laudantium voluptas ducimus
+                incidunt similique dicta provident quisquam!</p>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nam accusamus molestias est quas quia cum
+                blanditiis assumenda illo fugit placeat molestiae, eius quae veritatis necessitatibus delectus
+                repellendus quibusdam at vel! Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi earum
+                nulla corrupti optio autem odio nemo, ipsam, tempora at sed accusantium iure laudantium voluptas ducimus
+                incidunt similique dicta provident quisquam!</p>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nam accusamus molestias est quas quia cum
+                blanditiis assumenda illo fugit placeat molestiae, eius quae veritatis necessitatibus delectus
+                repellendus quibusdam at vel! Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi earum
+                nulla corrupti optio autem odio nemo, ipsam, tempora at sed accusantium iure laudantium voluptas ducimus
+                incidunt similique dicta provident quisquam!</p>
+
+        </div>
+
+        <div id="rodape">
+            <h4>Todos direitos reservados</h4>
+        </div>
     </div>
 
-    <div id="desc">
-        <div class="titulo">Sobre Anna Bella</div>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nam accusamus molestias est quas quia cum blanditiis assumenda illo fugit placeat molestiae, eius quae veritatis necessitatibus delectus repellendus quibusdam at vel!</p>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nam accusamus molestias est quas quia cum blanditiis assumenda illo fugit placeat molestiae, eius quae veritatis necessitatibus delectus repellendus quibusdam at vel!</p>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nam accusamus molestias est quas quia cum blanditiis assumenda illo fugit placeat molestiae, eius quae veritatis necessitatibus delectus repellendus quibusdam at vel!</p>
-    </div>
 
-    <div id="rodape">
-        Todos os direitos reservados
-    </div>
 
 </body>
 
